# highway_dsl

./: .gitignore  .readthedocs.yaml  AGENT_PROMPT_UPDATE.md  CODE_QUALITY_FIX.md  FIXED_UPDATE.md  GEMINI.md  GENERATOR_UPDATE.md  GENERATOR_UX_FIX.md  LAYOUT_FIX.md  LICENSE  NAVBAR_FIX.md  README.md  SUMMARY.md  UPDATE_SUMMARY.md  example_usage.py  index.html  index.html.backup  playground.py  pyproject.toml  spec.txt  workflow_dsl.py
.github/workflows/: publish.yml
app/: AGENT_PROMPT.md  README.md  app.py  gunicorn.conf.py  requirements.txt  start.sh
docs/: api.rst  bank_etl.mermaid  conf.py  index.rst  requirements.txt
examples/: bank_end_of_the_day_etl_workflow.py  car_factory_workflow.py  car_factory_workflow_with_fluent_builder.py  complex_agentic_workflow.py  example_usage.py  scheduled_event_workflow.py  test_driven_agentic_ai_software_workflow.py
highway/: processor.py  status_exception.py  task.py  time_block.py  workflow_model.py
highway_dsl/: __init__.py  workflow_dsl.py
javascript_sdk/: highway_dsl.js  index.html
javascript_sdk/examples/: README.md  bank_etl_workflow.js  data_pipeline_workflow.js  ecommerce_workflow.js  parallel_workflow.js  simple_workflow.js
tests/: test_agentic_ai_software_workflow.py  test_all_workflow_examples.py  test_car_factory_workflow.py  test_car_factory_workflow_with_fluent_builder.py  test_complex_agentic_workflow.py  test_example_usage.py  test_mermaid_conversion.py  test_workflow_dsl.py
tests/data/: car_factory_workflow.yaml  car_factory_workflow_with_fluent_builder.yaml  complex_agentic_workflow.yaml  example_usage.yaml  test_driven_agentic_ai_software_workflow.yaml
