[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "highway"
version = "0.0.3"
authors = [
  { name = "Farseed Ashouri", email = "farseed.ashouri@gmail.com" },
]
description = "A workflow engine for reliable and scalable data processing pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# add dependencies here
dependencies = [
    "pydantic>=2.12.3"
    ]

[project.urls]
Homepage = "https://github.com/rodmena-limited/highway"
Issues = "https://github.com/rodmena-limited/highway/issues"
