[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["highway_dsl"]

[project]
name = "highway_dsl"
version = "2.0.2"
authors = [
  { name = "Farseed Ashouri", email = "farseed.ashouri@gmail.com" },
]
description = "LTS Stable: Domain-specific language (DSL) for defining production-grade workflows with explicit coordination, event-driven patterns, and Temporal-style join operators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# add dependencies here
dependencies = [
    "pydantic>=2.12.3",
    "pyyaml>=6.0"
    ]
# dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pytest-cov>=2.12.1",
]

[project.urls]
Homepage = "https://github.com/rodmena-limited/highway_dsl"
Issues = "https://github.com/rodmena-limited/highway_dsl/issues"
